--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-caes_gatos
-ed2
-ed1
-ed3
-ed4
-ed5
-ed6
-ed7
-ed8
-ed9
-ed10
-ed11
-ed12
-ed3_gorila
-ed3_gorila_pref
-macacos_mutex
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
